Name:                happstack-auth
Version:             0.2
License:             BSD3
Author:              Nils Schweinsberg
Maintainer:          mail@n-sch.de

Synopsis:            Happstack authentication suite
Description:         Happstack module
Category:            Web

Homepage:            http://github.com/mcmaniac/happstack-auth
Build-Type:          Simple
Cabal-Version:       >= 1.6

Library

    HS-Source-Dirs:      src

    Build-Depends:
        base                == 4.*,
        bytestring          == 0.*,
        mtl                 == 1.*,
        containers          == 0.*,
        random              == 1.*,
        happstack           == 0.5.*,
        happstack-state     == 0.5.*,
        happstack-server    == 0.5.*,
        happstack-ixset     == 0.5.*,
        happstack-data      == 0.5.*,
        Crypto              == 4.*,
        convertible         == 1.*

    Exposed-Modules:
        Happstack.Auth
        Happstack.Auth.Data.Internal

    Other-Modules:
        Happstack.Auth.Data.Internal.AuthState
        Happstack.Auth.Data.Internal.SaltedHash
        Happstack.Auth.Data.Internal.SessionData
        Happstack.Auth.Data.Internal.SessionKey
        Happstack.Auth.Data.Internal.Sessions
        Happstack.Auth.Data.Internal.User
        Happstack.Auth.Data.Internal.UserId
        Happstack.Auth.Data.Internal.Username
