Name:                happstack-auth
Version:             0.2
License:             BSD3
Author:              Nils Schweinsberg
Maintainer:          mail@n-sch.de

Synopsis:            Happstack authentication suite
Description:         Happstack module, based on Happstack-State
Category:            Web

Homepage:            http://github.com/mcmaniac/happstack-auth
Build-Type:          Simple
Cabal-Version:       >= 1.6

Library

    HS-Source-Dirs:         src
    GHC-Options:            -Wall

    Build-Depends:
        base                == 4.*,
        bytestring          == 0.*,
        mtl                 == 1.*,
        containers          == 0.*,
        random              == 1.*,
        happstack           >= 0.5.1,
        happstack-state     >= 0.5.1,
        happstack-server    >= 0.5.1,
        happstack-ixset     >= 0.5.1,
        happstack-data      >= 0.5.1,
        Crypto              == 4.*,
        convertible         == 1.*

    Exposed-Modules:
        Happstack.Auth
        Happstack.Auth.Internal
        Happstack.Auth.Internal.Data

    Other-Modules:
        Happstack.Auth.Internal.Data.AuthState
        Happstack.Auth.Internal.Data.SaltedHash
        Happstack.Auth.Internal.Data.SessionData
        Happstack.Auth.Internal.Data.SessionKey
        Happstack.Auth.Internal.Data.Sessions
        Happstack.Auth.Internal.Data.User
        Happstack.Auth.Internal.Data.UserId
        Happstack.Auth.Internal.Data.Username
