Name:                happstack-auth
Version:             0.2.1.2
License:             BSD3
License-File:        LICENSE
Author:              Nils Schweinsberg
Maintainer:          mail@nils.cc
Category:            Web

Synopsis:            A Happstack Authentication Suite
Description:         An easy way to to implement user authentication for
                     Happstack web applications.

Build-Type:          Simple
Cabal-Version:       >= 1.8

Source-Repository head
    type:       git
    location:   http://github.com/mcmaniac/happstack-auth

Library

    HS-Source-Dirs:         src
    GHC-Options:            -Wall

    Build-Depends:
        base,
        bytestring,
        mtl,
        containers,
        random,
        old-time,
        happstack-server,
        acid-state,
        ixset,
        safecopy,
        convertible,
        Crypto

    Exposed-Modules:
        Happstack.Auth
        Happstack.Auth.Internal
        Happstack.Auth.Internal.Data

    Other-Modules:

        Codec.Utils

        Happstack.Auth.Internal.Data.AuthState
        Happstack.Auth.Internal.Data.SaltedHash
        Happstack.Auth.Internal.Data.SessionData
        Happstack.Auth.Internal.Data.SessionKey
        Happstack.Auth.Internal.Data.Sessions
        Happstack.Auth.Internal.Data.User
        Happstack.Auth.Internal.Data.UserId
        Happstack.Auth.Internal.Data.Username

        Happstack.Auth.Internal.Data.Old.SessionData0
